# MiqroForge

./: .gitignore  COMMERCIAL-LICENSE  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  Makefile  README.md  README_zh-CN.md  README_zh_CN.md  TRADEMARKS.md  docker-compose.yaml  example_usage.py  pyproject.toml  requirements.txt  setup.py
CLA/: ECLA.md  ICLA.md
config/: application-dev.yml  config.json  miqroforge.sql
docs/: troubleshooting.md
miqroforge/: __init__.py  cli.py
scripts/: install_miqroforge.sh  test_config.py
scripts/miqroforge/: __init__.py  cli.py  config.py
scripts/miqroforge/handle/: __init__.py  node.py  resources.py  show.py  status.py  task.py
scripts/miqroforge/managers/: __init__.py  docker_manager.py  k8s_manager.py  mysql_manager.py  service_manager.py
tests/: test.ipynb  test.yaml  test_cases.ipynb
